# work-pilot

./: README.md  analyze_api.py  analyzer.py  api_analysis.json  api_audit_report.md  audit_results.json  docker-compose.yml  generate_report.py
auth-service/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  conftest.py  main.py  pyproject.toml  pytest_out.txt  ruff.toml
auth-service/alembic/: env.py
auth-service/alembic/versions/: 7b9352dd17b6_initial_migration.py  87c9a88c0f32_add_mfa_fields.py  b619e3ca6091_add_full_name_and_email_to_employees.py
auth-service/app/: main.py
auth-service/src/: main.py
auth-service/src/core/: config.py  dependencies.py  exceptions.py  middleware.py  security.py
auth-service/src/core/email/: email_service.py
auth-service/src/core/email/templates/: mfa_disabled.html  (+2 more)
auth-service/src/infrastructure/database/: base.py  schema_manager.py  session.py  tenant_session.py
auth-service/src/infrastructure/middleware/: rate_limit_middleware.py  tenant_middleware.py
auth-service/src/modules/auth/: router.py  schemas.py  service.py
auth-service/src/modules/employee/: models.py  repository.py  schemas.py
auth-service/src/modules/mfa/: repository.py  router.py  schemas.py  service.py
auth-service/src/modules/password_reset/: models.py  repository.py  schemas.py  service.py
auth-service/src/modules/tenant/: models.py  repository.py  schemas.py
auth-service/src/modules/user/: models.py  repository.py  schemas.py
auth-service/tests/: test_main.py
auth-service/tests/alembic/: test_env.py  test_initial_migration.py
auth-service/tests/core/: test_config.py  test_exceptions.py  test_security.py
auth-service/tests/infrastructure/database/: test_base.py  test_schema_manager.py  test_session.py  test_tenant_session.py
auth-service/tests/integration/: test_mfa.py
hr-service/: main.py  pyproject.toml
hr-service/alembic/: env.py
hr-service/alembic/versions/: 19edd9b4c1f8_add_leave_balances_table.py  21a410172480_add_all_policies_tables.py  adaa3fb0f7c9_create_employee_tables.py  b68feb94d859_create_employee_tables.py  c6cca7364cc5_create_attendance_table.py  d5626ae864af_create_leave_requests_table.py  f949296f2426_add_holidays_table.py  fe6cb22b98c7_create_organization_table.py  ff03ea1d17e2_create_leave_types_table.py
hr-service/src/: main.py
hr-service/src/core/: config.py  exceptions.py
hr-service/src/infrastructure/clients/: workflow_client.py
hr-service/src/infrastructure/database/: tenant_session.py
hr-service/src/modules/attendance/: models.py  repository.py  router.py  schemas.py  service.py
hr-service/src/modules/employee/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
hr-service/src/modules/leave/: exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
hr-service/src/modules/organization/: models.py  repository.py  router.py  schemas.py  service.py
hr-service/src/modules/policies/: models.py  repository.py  router.py  schemas.py  service.py
it-service/: .env  .env.example  .gitignore  Dockerfile  pyproject.toml
it-service/alembic/: env.py  script.py.mako
it-service/alembic/versions/: 097f17259a78_remove_approval_fields.py  7a2a73560b31_initial_it_service.py
it-service/src/it_service/: main.py
it-service/src/it_service/core/: config.py  dependencies.py
workflow-service/: .env  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml
workflow-service/alembic/: env.py
workflow-service/alembic/versions/: c60cf6f5c283_workflow_init.py
workflow-service/src/: main.py
workflow-service/src/core/: config.py  dependencies.py  exceptions.py  logging.py  security.py
workflow-service/src/infrastructure/clients/: base_client.py  hr_client.py  it_client.py  notification_client.py
workflow-service/src/infrastructure/database/: base.py  schema.py  session.py
workflow-service/src/modules/workflow/: __init__.py  constants.py  enums.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
(+100 files in other folders)
