[project]
name = "auth-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
    "sendgrid>=6.10.0",
    "jinja2>=3.1.6",
    "pyotp>=2.10.0",
    "qrcode>=8.0.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "httpx>=0.28.1",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
