[project]
name = "it-service"
version = "0.1.0"
description = "WorkPilot AI IT Service"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # FastAPI
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",

    # Database
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.4",
    "psycopg[binary]>=3.2.9",

    # Validation & Settings
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    # Environment Variables
    "python-dotenv>=1.1.1",

    # Authentication
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",

    # Forms & File Uploads
    "python-multipart>=0.0.20",

    # HTTP Client (Microservice Communication)
    "httpx>=0.28.1",

    # Logging
    "structlog>=25.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.5",
    "mypy>=1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/it_service"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
]

ignore = [
    "B008",  # Do not perform function call `Depends` in argument defaults
    "E501",  # Line too long
    "UP042",  # Class inherits from both `str` and `enum.Enum`
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]