[project]
name = "workflow-service"
version = "0.1.0"
description = "WorkPilot Workflow Service"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",

    "sqlalchemy>=2.0.41",
    "psycopg[binary]>=3.2.9",

    "alembic>=1.16.4",

    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",

    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",

    "httpx>=0.28.1",

    "python-dotenv>=1.1.1",

    "structlog>=25.4.0",

    "python-multipart>=0.0.20",
]

[tool.uv]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
